--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
                 <div class="card p-3 rounded" style=" width: 19em;" role="button" (click)="productview(data.category)">
                     <img [src]="data.img" style="height: 250px;" alt="" class="card-img-top">
                     <div class="card-body">
-                        <marquee class="font-italic  d-flex justify-content-center">{{data.category}}</marquee>
+                        <marquee class="header-title2  d-flex justify-content-center">{{data.category}}</marquee>
                     </div>
                 </div>
             </div>
