--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-md navbar-light nav-bg mb-2 sticky-top" >
     <a class="navbar-brand" href="#">
       <img class="rounded mx-2" src="../../assets//logo/logo.png" style="height: 50px; width: 100px;" alt="">
-      <label class="mx-2">Capital File Works</label>
+      <label class="header-title1 mx-2">Capital File Works</label>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
