--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,26 +1,34 @@
+<nav class="navbar navbar-expand-md navbar-light nav-bg mb-2 sticky-top">
+  <a class="navbar-brand" href="#">
+    <img class="rounded mx-2" src="../../assets//logo/logo.png" style="height: 50px; width: 100px;" alt="">
+    <label class="header-title1 mx-2">Capital File Works</label>
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+    aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
+    <ul class="navbar-nav">
 
-<nav class="navbar navbar-expand-md navbar-light nav-bg mb-2 sticky-top" >
-    <a class="navbar-brand" href="#">
-      <img class="rounded mx-2" src="../../assets//logo/logo.png" style="height: 50px; width: 100px;" alt="">
-      <label class="header-title1 mx-2">Capital File Works</label>
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Products</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Orders</a>
-        </li>
-        <!-- <li class="nav-item">
+      <li class="nav-item mt-2">
+        <div class="form-check form-switch">
+          <input #mode class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault"
+            [(ngModel)]="checked" (change)="changeMode()">
+          <label class="form-check-label" for="flexSwitchCheckDefault">Change Mode | </label>
+        </div>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home |  </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Products | </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Orders </a>
+      </li>
+      <!-- <li class="nav-item">
           <a class="nav-link disabled" href="#">Disabled</a>
         </li> -->
-      </ul>
-    </div>
-  </nav>
+    </ul>
+  </div>
+</nav>
