--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <app-carousel />
     <div class="bg-body-tertiary rounded p-2 mt-4 shadow d-flex justify-content-center">Our Products</div>
-    <div class="d-flex justify-content-center" *ngIf="dataLoaded">
+    <div class="d-flex justify-content-center mt-3" *ngIf="dataLoaded">
         <div class="spinner-grow" role="status">
         </div>
     </div>
