--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -24,7 +24,10 @@
         <a class="nav-link" href="#">Products | </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Orders </a>
+        <a class="nav-link" href="#">Orders |  </a>
+      </li>
+      <li class="nav-item">
+        <a routerLink ="/about" class="nav-link" href="#">About Us </a>
       </li>
       <!-- <li class="nav-item">
           <a class="nav-link disabled" href="#">Disabled</a>
