--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -21,10 +21,10 @@
         <a class="nav-link" href="#">Home |  </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Products | </a>
+        <a routerLink="product" class="nav-link" href="#">Products | </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Orders |  </a>
+        <a routerLink="/order" class="nav-link" href="#">Orders |  </a>
       </li>
       <li class="nav-item">
         <a routerLink ="/about" class="nav-link" href="#">About Us </a>
