Implemented order and login

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,12 +1,15 @@
 .nav-bg {
-    /* background-color: chartreuse; */
-    background-image: linear-gradient(to right, #DECBA4, #3E5151);
-    
+  /* background-color: chartreuse; */
+  background-image: linear-gradient(45deg, #553c9a, #ee4b2b);
 }
 
 .fixed {
-    position: sticky;
+  position: sticky;
 }
 
+p,label {
 
-
+  fill: white;
+  font-size: "20";
+  -webkit-text-fill-color: #e6e9e0;
+}
