--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 
 
-<app-navbar class="mt-3"/>
+<app-navbar class=""/>
 <!-- <div class="d-flex justify-content-center">
   <div *ngIf="true" class="spinner-grow" role="status">
   </div>
