--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,40 +1,42 @@
-<nav class="navbar navbar-expand-md navbar-light nav-bg mb-2 sticky-top">
+<nav class="navbar navbar-expand-md navbar-light nav-bg  sticky-top">
   <a class="navbar-brand" href="#">
     <img class="rounded mx-2" src="../../assets//logo/logo.png" style="height: 50px; width: 100px;" alt="">
     <label class="header-title1 mx-2">Capital File Works</label>
   </a>
+  <div *ngIf="menuType === 'dashboard'" class="d-flex justify-content-center mt-2 mx-4 text-dark">
+    <p class="text-fill:blue-60">Welcome, {{email}}</p>
+  </div>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
     <ul class="navbar-nav">
-
-      <li class="nav-item mt-2 mx-5">
+      <li *ngIf="menuType === 'default'" class="nav-item mt-2 mx-5">
         <div class="form-check form-switch">
           <input #mode class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault"
             [(ngModel)]="checked" (change)="changeMode()">
           <label class="form-check-label" for="flexSwitchCheckDefault">Change Mode</label>
         </div>
       </li>
-      <li class="nav-item active">
+      <li *ngIf="menuType === 'default'" class="nav-item active">
         <a class="nav-link" href="#">Home</a>
       </li>
-      <li class="nav-item active">
+      <li *ngIf="menuType === 'default'" class="nav-item active">
         <a routerLink="auth" class="nav-link" href="#">Login</a>
       </li>
-      <li class="nav-item">
+      <li *ngIf="menuType === 'dashboard'" class="nav-item">
         <a routerLink="product" class="nav-link" href="#">Products</a>
       </li>
-      <li class="nav-item">
-        <a routerLink="/order" class="nav-link" href="#">Orders</a>
+      <li *ngIf="menuType === 'dashboard'" class="nav-item">
+        <a routerLink="/order" class="nav-link" href="#">Orders <span class="badge badge-success">{{cartCount}}</span></a>
       </li>
-      <li class="nav-item">
-        <a routerLink ="/about" class="nav-link" href="#">About Us</a>
+      <li *ngIf="menuType === 'default'" class="nav-item">
+        <a routerLink="/about" class="nav-link" href="#">About Us</a>
       </li>
-      <!-- <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li> -->
+      <li *ngIf="menuType === 'dashboard'" class="nav-item">
+        <a role="button" (click)="logout()" class="btn btn-primary btn-danger "><button>Log Out</button></a>
+      </li>
     </ul>
   </div>
 </nav>
