--- a/src/app/product-view/product-view.component.css
+++ b/src/app/product-view/product-view.component.css
@@ -1,4 +1,13 @@
 
+.bg-body-tertiary {
+    border: 3px solid blue;
+}
+
+.card {
+    border: 3px solid black;
+    border-radius:10px;
+    /* padding-bottom: 3%; */
+}
 
 .Stars {
     --percent: calc(var(--rating) / 5 * 100%);
