--- a/src/app/sign/sign.component.html
+++ b/src/app/sign/sign.component.html
@@ -1,19 +1,23 @@
-<div class="container fluid">
-<form>
-    <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-    </div>
-    <!-- <div class="form-group form-check">
-      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-      <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div> -->
-    <button type="submit" class="btn btn-primary my-2">Submit</button>
-    <label class="mx-3"> Not Register? Please</label><button routerLink="register" type="submit" class="btn btn-primary ">Register</button>
-  </form>
+<div class="bg">
+  <app-modal *ngIf="message" [message]="message"></app-modal>
+  <h3 class="d-flex justify-content-center"> Login</h3>
+  <div class="container fluid d-flex justify-content-center">
+    <form [formGroup]="adduserForm" style="border: 1px solid; width: 45%; "
+      class="p-3 form rounded shadow bg-body-tertiary is-dark" (ngSubmit)="login()">
+      <div class="form-group">
+        <label for="exampleInputEmail1">Email address</label>
+        <input formControlName="email" style="width: 100%;" type="email" class="form-control" id="exampleInputEmail1"
+          aria-describedby="emailHelp" placeholder="Enter email">
+        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input style="width: 100%;" formControlName="password" type="password" class="form-control"
+          id="exampleInputPassword1" placeholder="Password">
+      </div>
+      <label class="my-3"> Not Registered?</label><a routerLink="register" type="submit"
+        class=" ">Click here</a>
+      <button type="submit" class="btn btn-primary my-2 d-flex" style=" margin-left: auto;">Login</button>
+    </form>
+  </div>
 </div>
