--- a/src/styles.css
+++ b/src/styles.css
@@ -1,25 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@fortawesome/fontawesome-free/css/all.css";
 
-
 .header-title1 {
-    font-size: 20px;
-    font-weight: 600;
-    background-image: conic-gradient(#553c9a 30%, #ee4b2b 40%, #ee4b2b 70%, #00c2cb 80%, #553c9a);
-    color: transparent;
-    background-clip: text;
-    -webkit-background-clip: text;
-    
-  }
+  font-size: 20px;
+  font-weight: 600;
+  background-image: radial-gradient(#553c9a, #ee4b2b);
+  color: rgba(10, 10, 10, 0.644);
+  background-clip: text;
+  -webkit-background-clip: text;
+}
 .header-title2 {
-    font-size: 30px;
-    font-weight: 600;
-    background-image: conic-gradient(#553c9a 30%, #ee4b2b 40%, #ee4b2b 70%, #00c2cb 80%, #553c9a);
-    color: rgb(10, 65, 247);
-    background-clip: text;
-    -webkit-background-clip: text;
-    
-  }
-
-
-
+  font-size: 30px;
+  font-weight: 600;
+  background-image: conic-gradient(
+    #553c9a 30%,
+    #ee4b2b 40%,
+    #ee4b2b 70%,
+    #00c2cb 80%,
+    #553c9a
+  );
+  color: rgba(10, 10, 10, 0.644);
+  background-clip: text;
+  -webkit-background-clip: text;
+}
